crates/squawk_parser/tests/snapshots/tests__alter_collation_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_collation.sql
---
SOURCE_FILE
  COMMENT "-- refresh"
  WHITESPACE "\n"
  ALTER_COLLATION
    ALTER_KW "alter"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    COLLATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE "\n  "
    REFRESH_VERSION
      REFRESH_KW "refresh"
      WHITESPACE " "
      VERSION_KW "version"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_COLLATION
    ALTER_KW "alter"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    COLLATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE "\n  "
    COLLATION_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      COLLATION
        PATH
          PATH_SEGMENT
            IDENT "d"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_COLLATION
    ALTER_KW "alter"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    COLLATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE "\n  "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_NAME_REF
          IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_COLLATION
    ALTER_KW "alter"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    COLLATION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "s"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE "\n  "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_ROLE
          CURRENT_ROLE_KW "current_role"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_schema"
  WHITESPACE "\n"
  ALTER_COLLATION
    ALTER_KW "alter"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    COLLATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE "\n  "
    SET_SCHEMA
      SET_KW "set"
      WHITESPACE " "
      SCHEMA_KW "schema"
      WHITESPACE " "
      SCHEMA_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
