crates/squawk_parser/tests/snapshots/tests__alter_conversion_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_conversion.sql
---
SOURCE_FILE
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_CONVERSION
    ALTER_KW "alter"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    CONVERSION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    CONVERSION_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      CONVERSION
        PATH
          PATH_SEGMENT
            IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_CONVERSION
    ALTER_KW "alter"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    CONVERSION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_NAME_REF
          IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_CONVERSION
    ALTER_KW "alter"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    CONVERSION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_USER
          CURRENT_USER_KW "current_user"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_schema"
  WHITESPACE "\n"
  ALTER_CONVERSION
    ALTER_KW "alter"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    CONVERSION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    SET_SCHEMA
      SET_KW "set"
      WHITESPACE " "
      SCHEMA_KW "schema"
      WHITESPACE " "
      SCHEMA_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- qualified_name"
  WHITESPACE "\n"
  ALTER_CONVERSION
    ALTER_KW "alter"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    CONVERSION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "a"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    SET_SCHEMA
      SET_KW "set"
      WHITESPACE " "
      SCHEMA_KW "schema"
      WHITESPACE " "
      SCHEMA_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
