crates/squawk_parser/tests/snapshots/tests__alter_database_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_database.sql
---
SOURCE_FILE
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    DATABASE_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      DATABASE
        IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_NAME_REF
          IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_USER
          CURRENT_USER_KW "current_user"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- tablespace"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    SET_TABLESPACE
      SET_KW "set"
      WHITESPACE " "
      TABLESPACE_KW "tablespace"
      WHITESPACE " "
      TABLESPACE_REF
        IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- refresh"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    REFRESH_COLLATION_VERSION
      REFRESH_KW "refresh"
      WHITESPACE " "
      COLLATION_KW "collation"
      WHITESPACE " "
      VERSION_KW "version"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_param"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        TO_KW "to"
        WHITESPACE " "
        CONFIG_VALUE_NAME
          IDENT "v"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        EQ "="
        WHITESPACE " "
        CONFIG_VALUE_NAME
          IDENT "v"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        EQ "="
        WHITESPACE " "
        DEFAULT_KW "default"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      FROM_CURRENT
        FROM_KW "from"
        WHITESPACE " "
        CURRENT_KW "current"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    RESET_CONFIG_PARAM
      RESET_KW "reset"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    RESET_CONFIG_PARAM
      RESET_KW "reset"
      WHITESPACE " "
      ALL_KW "all"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- with_option"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    DATABASE_OPTION_LIST
      WITH_KW "with"
      WHITESPACE " "
      DATABASE_OPTION_GENERIC
        IDENT "allow_connections"
        WHITESPACE " "
        LITERAL
          TRUE_KW "true"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- option_connection_limit"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    DATABASE_OPTION_LIST
      DATABASE_OPTION_CONNECTION_LIMIT
        CONNECTION_KW "connection"
        WHITESPACE " "
        LIMIT_KW "limit"
        WHITESPACE " "
        LITERAL
          INT_NUMBER "10"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- option_is_template"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    DATABASE_OPTION_LIST
      DATABASE_OPTION_GENERIC
        IDENT "is_template"
        WHITESPACE " "
        LITERAL
          FALSE_KW "false"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- with_multiple_options"
  WHITESPACE "\n"
  ALTER_DATABASE
    ALTER_KW "alter"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    DATABASE_OPTION_LIST
      WITH_KW "with"
      WHITESPACE " "
      DATABASE_OPTION_GENERIC
        IDENT "allow_connections"
        WHITESPACE " "
        LITERAL
          TRUE_KW "true"
      WHITESPACE " "
      DATABASE_OPTION_CONNECTION_LIMIT
        CONNECTION_KW "connection"
        WHITESPACE " "
        LIMIT_KW "limit"
        WHITESPACE " "
        LITERAL
          INT_NUMBER "10"
      WHITESPACE " "
      DATABASE_OPTION_GENERIC
        IDENT "is_template"
        WHITESPACE " "
        LITERAL
          FALSE_KW "false"
    SEMICOLON ";"
  WHITESPACE "\n\n"
