crates/squawk_parser/tests/snapshots/tests__alter_default_privileges_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_default_privileges.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    SELECT_KW "select"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    FOR_KW "for"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "r"
    COMMA ","
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    WHITESPACE "\n  "
    IN_KW "in"
    WHITESPACE " "
    SCHEMA_KW "schema"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    COMMA ","
    WHITESPACE " "
    NAME_REF
      IDENT "s2"
    COMMA ","
    WHITESPACE " "
    NAME_REF
      IDENT "s3"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    SELECT_KW "select"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    FOR_KW "for"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    SESSION_USER_KW "session_user"
    WHITESPACE "\n  "
    IN_KW "in"
    WHITESPACE " "
    SCHEMA_KW "schema"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    SELECT_KW "select"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- grant_tables"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    SELECT_KW "select"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    INSERT_KW "insert"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    UPDATE_KW "update"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "public"
    COMMA ","
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    COMMA ","
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    SESSION_USER_KW "session_user"
    WHITESPACE "\n    "
    WITH_KW "with"
    WHITESPACE " "
    GRANT_KW "grant"
    WHITESPACE " "
    OPTION_KW "option"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    DELETE_KW "delete"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    TRUNCATE_KW "truncate"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    REFERENCES_KW "references"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    IDENT "maintain"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    SELECT_KW "select"
    COMMA ","
    WHITESPACE " "
    INSERT_KW "insert"
    COMMA ","
    WHITESPACE " "
    UPDATE_KW "update"
    COMMA ","
    WHITESPACE " "
    DELETE_KW "delete"
    COMMA ","
    WHITESPACE " "
    TRUNCATE_KW "truncate"
    COMMA ","
    WHITESPACE " "
    REFERENCES_KW "references"
    COMMA ","
    WHITESPACE " "
    TRIGGER_KW "trigger"
    COMMA ","
    WHITESPACE " "
    IDENT "maintain"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n    "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n    "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- grant_sequences"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    IDENT "usage"
    COMMA ","
    WHITESPACE " "
    SELECT_KW "select"
    COMMA ","
    WHITESPACE " "
    UPDATE_KW "update"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    SEQUENCES_KW "sequences"
    WHITESPACE "\n  "
    TO_KW "to"
    WHITESPACE " "
    IDENT "u"
    COMMA ","
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    COMMA ","
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    SESSION_USER_KW "session_user"
    COMMA ","
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    CURRENT_ROLE_KW "current_role"
    WHITESPACE "\n  "
    WITH_KW "with"
    WHITESPACE " "
    GRANT_KW "grant"
    WHITESPACE " "
    OPTION_KW "option"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    IDENT "usage"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    SEQUENCES_KW "sequences"
    WHITESPACE "\n  "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- grant_functions"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    EXECUTE_KW "execute"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    FUNCTIONS_KW "functions"
    WHITESPACE "\n  "
    TO_KW "to"
    WHITESPACE " "
    IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    ROUTINES_KW "routines"
    WHITESPACE "\n  "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    ROUTINES_KW "routines"
    WHITESPACE "\n  "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE "\n  "
    WITH_KW "with"
    WHITESPACE " "
    GRANT_KW "grant"
    WHITESPACE " "
    OPTION_KW "option"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- grant_types"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    IDENT "usage"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    TYPES_KW "types"
    WHITESPACE "\n  "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    TYPES_KW "types"
    WHITESPACE "\n  "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
    COMMA ","
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    IDENT "u"
    COMMA ","
    WHITESPACE " "
    IDENT "public"
    WHITESPACE "\n  "
    WITH_KW "with"
    WHITESPACE " "
    GRANT_KW "grant"
    WHITESPACE " "
    OPTION_KW "option"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- grant_schemas"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    IDENT "usage"
    COMMA ","
    WHITESPACE " "
    CREATE_KW "create"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    SCHEMAS_KW "schemas"
    WHITESPACE "\n  "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    GRANT_KW "grant"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    SCHEMAS_KW "schemas"
    WHITESPACE "\n  "
    TO_KW "to"
    WHITESPACE " "
    IDENT "r"
    COMMA ","
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    IDENT "u"
    COMMA ","
    WHITESPACE " "
    IDENT "public"
    WHITESPACE "\n  "
    WITH_KW "with"
    WHITESPACE " "
    GRANT_KW "grant"
    WHITESPACE " "
    OPTION_KW "option"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- revoke_tables"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    REVOKE_KW "revoke"
    WHITESPACE " "
    GRANT_KW "grant"
    WHITESPACE " "
    OPTION_KW "option"
    WHITESPACE " "
    FOR_KW "for"
    WHITESPACE "\n  "
    SELECT_KW "select"
    COMMA ","
    WHITESPACE " "
    INSERT_KW "insert"
    COMMA ","
    WHITESPACE " "
    UPDATE_KW "update"
    COMMA ","
    WHITESPACE " "
    DELETE_KW "delete"
    COMMA ","
    WHITESPACE " "
    TRUNCATE_KW "truncate"
    COMMA ","
    WHITESPACE " "
    REFERENCES_KW "references"
    COMMA ","
    WHITESPACE " "
    TRIGGER_KW "trigger"
    COMMA ","
    WHITESPACE " "
    IDENT "maintain"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n  "
    FROM_KW "from"
    WHITESPACE " "
    IDENT "r"
    COMMA ","
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    WHITESPACE "\n  "
    CASCADE_KW "cascade"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    REVOKE_KW "revoke"
    WHITESPACE " "
    SELECT_KW "select"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    TABLES_KW "tables"
    WHITESPACE "\n  "
    FROM_KW "from"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE "\n  "
    RESTRICT_KW "restrict"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- revoke_sequences"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    REVOKE_KW "revoke"
    WHITESPACE " "
    GRANT_KW "grant"
    WHITESPACE " "
    OPTION_KW "option"
    WHITESPACE " "
    FOR_KW "for"
    WHITESPACE "\n  "
    IDENT "usage"
    COMMA ","
    WHITESPACE " "
    SELECT_KW "select"
    COMMA ","
    WHITESPACE " "
    UPDATE_KW "update"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    SEQUENCES_KW "sequences"
    WHITESPACE "\n  "
    FROM_KW "from"
    WHITESPACE " "
    IDENT "r"
    COMMA ","
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    WHITESPACE "\n  "
    CASCADE_KW "cascade"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    REVOKE_KW "revoke"
    WHITESPACE " "
    SELECT_KW "select"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    SEQUENCES_KW "sequences"
    WHITESPACE "\n  "
    FROM_KW "from"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE "\n  "
    RESTRICT_KW "restrict"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- revoke_functions"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    REVOKE_KW "revoke"
    WHITESPACE " "
    GRANT_KW "grant"
    WHITESPACE " "
    OPTION_KW "option"
    WHITESPACE " "
    FOR_KW "for"
    WHITESPACE "\n  "
    EXECUTE_KW "execute"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    FUNCTIONS_KW "functions"
    WHITESPACE "\n  "
    FROM_KW "from"
    WHITESPACE " "
    IDENT "r"
    COMMA ","
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    WHITESPACE "\n  "
    CASCADE_KW "cascade"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    REVOKE_KW "revoke"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    ROUTINES_KW "routines"
    WHITESPACE "\n  "
    FROM_KW "from"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE "\n  "
    RESTRICT_KW "restrict"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- revoke_types"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    REVOKE_KW "revoke"
    WHITESPACE " "
    GRANT_KW "grant"
    WHITESPACE " "
    OPTION_KW "option"
    WHITESPACE " "
    FOR_KW "for"
    WHITESPACE "\n  "
    IDENT "usage"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    TYPES_KW "types"
    WHITESPACE "\n  "
    FROM_KW "from"
    WHITESPACE " "
    IDENT "r"
    COMMA ","
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    WHITESPACE "\n  "
    CASCADE_KW "cascade"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    REVOKE_KW "revoke"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    TYPES_KW "types"
    WHITESPACE "\n  "
    FROM_KW "from"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE "\n  "
    RESTRICT_KW "restrict"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- revoke_schemas"
  WHITESPACE "\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    REVOKE_KW "revoke"
    WHITESPACE " "
    GRANT_KW "grant"
    WHITESPACE " "
    OPTION_KW "option"
    WHITESPACE " "
    FOR_KW "for"
    WHITESPACE "\n  "
    IDENT "usage"
    COMMA ","
    WHITESPACE " "
    CREATE_KW "create"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    SCHEMAS_KW "schemas"
    WHITESPACE "\n  "
    FROM_KW "from"
    WHITESPACE " "
    IDENT "r"
    COMMA ","
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    WHITESPACE "\n  "
    CASCADE_KW "cascade"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_DEFAULT_PRIVILEGES_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    DEFAULT_KW "default"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    REVOKE_KW "revoke"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    PRIVILEGES_KW "privileges"
    WHITESPACE "\n  "
    ON_KW "on"
    WHITESPACE " "
    SCHEMAS_KW "schemas"
    WHITESPACE "\n  "
    FROM_KW "from"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE "\n  "
    RESTRICT_KW "restrict"
  SEMICOLON ";"
  WHITESPACE "\n\n"
